src/test/deca/syntax/invalid/quote.deca
// Description:
//    Ajout de quote en trop
//
// Resultats:
//    Erreur du lexer ligne 10, à la 3e quote
//

{
    println(""");
}
